# CSQ-ShellTool

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  install.sh  uninstall.sh
include/: clear.hpp
scripts/: cmgen  fftran
src/: cmgen.cpp  fftran.cpp
