CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(CSQ-ShellTools VERSION 1.0)

SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(PROJECT_BINARY_DIR ${PROJECT_SOURCE_DIR}/Output)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/includes)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

SET(
  SrcsFile 

  "cmgen"
  "fftran"
  )

foreach(SRCS ${SrcsFile})
  MESSAGE([DEBUG]\ ${SRCS})
  ADD_EXECUTABLE(${SRCS} "${PROJECT_SOURCE_DIR}/src/${SRCS}.cpp")
  SET(INSTALL_LIST ${INSTALL_LIST}  ${SRCS})
  target_link_libraries(${SRCS} ${LIBS})
endforeach(SRCS)

INSTALL(
  TARGETS ${INSTALL_LIST}
  )

